--- a/index.html
+++ b/index.html
@@ -1,49 +1,57 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>What Job Fits Me?</title>
+  <meta charset="UTF-8">
+  <title>Career Personality Match</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Bootstrap 5 CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body { font-family: Arial; padding: 2rem; }
-    form { max-width: 600px; margin: auto; }
-    label { font-weight: bold; margin-top: 1rem; display: block; }
-    .result { background: #f0f0f0; padding: 1rem; margin-top: 2rem; border-radius: 8px; }
+    body {
+      background: linear-gradient(135deg, #dceefb, #f8f9fa);
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .card {
+      border-radius: 1rem;
+      box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.1);
+    }
+
+    textarea.form-control:focus {
+      box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+      border-color: #86b7fe;
+    }
+
+    .btn-primary {
+      background-color: #007bff;
+      border-color: #007bff;
+    }
+
+    .btn-primary:hover {
+      background-color: #0056b3;
+      border-color: #004b9b;
+    }
   </style>
 </head>
 <body>
 
-  <h1>Find Out What Career Matches Your Personality</h1>
+<div class="container">
+  <div class="card p-4 p-md-5">
+    <h2 class="text-center mb-4">🔍 Discover Your Ideal Career</h2>
+    <form method="POST" action="process_quiz.php">
+      <div class="mb-3">
+        <label for="personality" class="form-label fw-semibold">Describe your personality:</label>
+        <textarea name="personality" id="personality" rows="5" class="form-control" required></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary w-100">Find My Career Match</button>
+    </form>
+  </div>
+</div>
 
-  <form id="career-quiz">
-    <label>1. You enjoy:</label>
-    <input type="radio" name="q1" value="structured" required> Structured tasks<br>
-    <input type="radio" name="q1" value="creative"> Creative freedom<br>
-
-    <label>2. You prefer working with:</label>
-    <input type="radio" name="q2" value="data" required> Data<br>
-    <input type="radio" name="q2" value="people"> People<br>
-
-    <label>3. You are more:</label>
-    <input type="radio" name="q3" value="analytical" required> Analytical<br>
-    <input type="radio" name="q3" value="empathetic"> Empathetic<br>
-
-    <br><button type="submit">Find My Job Match</button>
-  </form>
-
-  <div id="output"></div>
-
-  <script>
-    document.getElementById("career-quiz").onsubmit = async function(e) {
-      e.preventDefault();
-      const formData = new FormData(e.target);
-
-      const response = await fetch("process_quiz.php", {
-        method: "POST",
-        body: formData
-      });
-
-      const result = await response.text();
-      document.getElementById("output").innerHTML = result;
-    };
-  </script>
+<!-- Bootstrap JS (optional if no JS components used) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
